--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,7 @@ body {
   max-width: 550px;
   margin: 0 auto;
   color: var(--primary-text-color);
-  padding: 30px 0;
+  padding: 30px 15px;
 }
 
 .form * {
